--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="en_ZA">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>TODO | A simple task manager</title>
-  <meta name="description" content="A simple way to keep track of your tasks">
-  <meta name="author" content="vusi mathonsi">
+    <title>TODO | A simple task manager</title>
+    <meta
+      name="description"
+      content="A simple way to keep track of your tasks"
+    />
+    <meta name="author" content="vusi mathonsi" />
 
-  <!-- Open Graph Protocol -->
-  <meta property="og:title" content="TODO | A simple task manager">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="images/ogimage.png">
-  <meta property="og:url" content="https://www.byVusi.github.io/todo">
-  <meta property="og:description" content="A simple way to keep track of your tasks">
-  <meta property="og:locale" content="en_ZA">
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="TODO | A simple task manager" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:url" content="https://www.byVusi.github.io/todo" />
+    <meta
+      property="og:description"
+      content="A simple way to keep track of your tasks"
+    />
+    <meta property="og:locale" content="en_ZA" />
 
-  <!-- Twitter social card -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:image" content="images/twitterimage.png">
-  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="apple-touch-icon" href="images/app-icon.png" />
-  <link rel="stylesheet" href="css/styles.css">
+    <!-- Twitter social card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="images/twitterimage.png" />
 
-  <script type="module" src="js/main.js" defer></script>
-</head>
-<body>
-  <header>
-    <p>TODO</p>
-  </header>
-  <main>
-    <div class="form">
-      <input type="text" placeholder="e.g. Buy eggs">
-      <button><i class="fa fa-plus"></i> Add my task</button>
-    </div>
-  </main>
-</body>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="apple-touch-icon" href="images/app-icon.png" />
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <script type="module" src="js/main.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <p>TODO</p>
+    </header>
+    <main>
+      <div class="form">
+        <input type="text" placeholder="e.g. Buy eggs" />
+        <button><i class="fa fa-plus"></i> Add my task</button>
+      </div>
+    </main>
+  </body>
 </html>
